[project]
name = "habit-tracker"
version = "0.1.0"
description = "Simple habit tracker CLI (learning project)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
habits = "habit_tracker.argparser:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Optional: tools config (format/lint covered below)

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]    # errors, imports, pyupgrade, bugbear
ignore = []
target-version = "py310"
